@@ -20,6 +20,9 @@ Every time you play the game, your whole experience is saved in the "recordedGam
 
 4) If there's some other issue that you have with the game---balancing or difficulty or general confusion---you can potentially send a recorded game that illustrates the problem along with your report.
 
+5) If you type messages on the PAUSE screen, I'll see those in your recorded game too.  You can use this feature to document your thoughts as you play.
+
+
 
 
 == Tutorial mode ==
